--- a/src/index.css
+++ b/src/index.css
@@ -40,8 +40,13 @@ button {
   padding: 0;
   background-color: transparent;
 }
+input {
+  position: relative;
+  z-index: 1;
+}
 a {
   text-decoration: none;
+  color: black;
 }
 .xClose {
   float: right;
@@ -130,14 +135,12 @@ background-image:
 
   display: grid;
   width: 100vw;
-  /* max-width: 100vw; */
   height: 100vh;
-  grid-template-rows: 114px 30px auto 60px;
-  /* grid-template-rows: 114px 30px calc(100vw - 204px) 60px; */
+  /* grid-template-rows: 114px 30px auto 60px; */
+  grid-template-rows: 114px 30px calc(100vh - 184px) 40px;
   grid-template-columns: 100vw;
-  background-color: white;
+  background-color: #fff;
   grid-gap: 0;
-  /* padding: 0; */
   margin: 0;
 grid-template-areas:
   '  header '
@@ -175,7 +178,6 @@ grid-template-areas:
 /*********************************************************************************************************/
 .grid-nav {
   grid-area: nav;
-  /* background-color: rgb(203, 125, 58); */
   background-color: orangered;
   text-align: right;
 }
@@ -185,7 +187,7 @@ grid-template-areas:
 }
 .nav-container > a {
   padding: 0 30px 0 0;
-  color: white;
+  color: #fff;
   font-weight: 700;
 }
 
@@ -210,7 +212,7 @@ grid-template-areas:
   width: 60vw;
   min-width: 200px;
   margin: 10vw auto;
-  background-color: white;
+  background-color: #fff;
   padding: 10vw;
 }
 
@@ -222,8 +224,9 @@ grid-template-areas:
 /*********************************************************************************************************/
 .grid-main {
   grid-area: main;
-  background-color: white;
+  background-color: #fff;
   text-align: center;
+  overflow: auto;
 }
 
 .dash-on {
@@ -244,11 +247,9 @@ grid-template-areas:
   background-color: orangered;
   background-repeat: repeat-x;
   /* background-size: contain; */
+  text-align: right;
 }
 
-.grid-footer > section {
-  float: right;
-}
 
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
