--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -64,11 +64,15 @@ color: rgb(123, 88, 65);
     color: #000;
 }
 
+.form-container > form {
+    margin-top: 5px;
+}
+
 /*********************************  FORM */
 .pick-label > div {
     height: 195px;
     width: 135px;
-    margin: 20px auto 20px auto;
+    margin: 5px auto 20px auto;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
