--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,7 @@ background-image:
   width: 100vw;
   height: 100vh;
   /* grid-template-rows: 114px 30px auto 60px; */
-  grid-template-rows: 114px 30px calc(100vh - 184px) 40px;
+  grid-template-rows: 114px 30px calc(100vh - 174px) 30px;
   grid-template-columns: 100vw;
   background-color: #fff;
   grid-gap: 0;
@@ -250,6 +250,10 @@ grid-template-areas:
   text-align: right;
 }
 
+.grid-footer section {
+  margin: -9px 10px 0 0;
+  font-size: 12px;
+}
 
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
