realign cards, simplify styling

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -160,7 +160,7 @@ section > section {
     max-height: 80px;
 }
 .menu-item-wrapper {
-    background-color: white !important;
+    background-color: #fff !important;
     max-height: 80px;
 }
 
