--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 .recipe-link {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #fff;
+  padding-top: 10px;
 }
 .recipe-container {
   position: relative;
@@ -79,7 +80,7 @@
   font-size: 14px;
   border: 3px solid orangered;
   border-radius: 3px;
-  color: white;
+  color: #fff;
   background-color: rgb(123, 63, 0);
   text-align: center;
   margin: 10px 27px;
@@ -114,7 +115,7 @@
     font-size: 14px;
     border: 3px solid orangered;
     border-radius: 3px;
-    color: white;
+    color: #fff;
     background-color: rgb(123, 63, 0);
     text-align: center;
     margin: 10px 27px;
