--- a/src/index.css
+++ b/src/index.css
@@ -365,6 +365,10 @@ grid-template-areas:
 .show-left {
   float: left;
 }
+.show-left > div {
+  transform: scale(1.6);
+  margin-top: 50%;
+}
 .show-right {
   float: right;
   margin: 10px 20px 10px 0;
