--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -8,7 +8,8 @@
     float: left;
     width: calc(26vw - 0px);
     display: inline-block;
-    padding: 0 1vw 0 5vw;
+    /* padding: 0 1vw 0 5vw; */
+    min-width: 280px;
 }
 .box1 h2 {
     text-align: center;
@@ -19,8 +20,7 @@
 }
 
 .box2 {
-    width: calc(68vw - 0px);
-    max-width: calc(600px);
+    width: calc(100vw - 280px);
     display: inline-block;
 }
 @media screen and (max-width: 767px) {
