--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -28,7 +28,7 @@
         width: 80vw;
         display: block;
         float: none;
-        margin: 0 10vw;
+        margin: 0 auto;
         padding: 0;
     }
     .box2 {
