limit width on box2

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -22,6 +22,7 @@
 .box2 {
     width: calc(100vw - 280px);
     display: inline-block;
+    max-width: 800px;
 }
 @media screen and (max-width: 767px) {
     .box1 {
