add overflow to dashboard creations, global className

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,12 @@ a {
   z-index: 1;
   /* margin: -7vw; */
 }
+
+.overflow {
+  overflow: auto;
+  height: auto;
+  margin-top: -5px;
+}
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           LABELS           ***************************************/
