--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -1,7 +1,12 @@
 .label-content-container {
     position: absolute;
 }
-
+.none {
+    border: transparent;
+    background-image: none;
+    background-color: transparent;
+    color: transparent;
+}
 /******************************************************************************************/
 /*************************************** BACKGROUND ***************************************/
 /******************************************************************************************/
