--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -27,10 +27,10 @@
 }
 @media screen and (max-width: 767px) {
     .box1 {
-        width: 80vw;
+        width: calc(100vw - 40px);
         display: block;
         float: none;
-        margin: 0 auto;
+        margin: 0 20px;
         padding: 0;
     }
     .box2 {
@@ -133,6 +133,7 @@ section > section {
 }
 
 .name-sauce {
+
     font-size: 14px;
     width: 125px;
     border: none;
