--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -1,11 +1,149 @@
-.label-content-container {
-    position: absolute;
+/******************************************************************************************/
+/*************************************** BACKGROUND ***************************************/
+/******************************************************************************************/
+.selector > .clear {
+    background-color: transparent;
+}
+.selector > .green {
+    background-color: green;
+}
+.selector > .yellow {
+    background-color: yellow;
+}
+.selector > .orange {
+    background-color: orange;
+}
+.selector > .orangered {
+    background-color: orangered;
+}
+.selector > .red {
+    background-color: red;
+}
+.selector > .pink {
+    background-color: pink;
+}
+.selector > .white {
+    background-color: white;
+}
+.selector > .black {
+    background-color: black;
+}
+.selector > .dodgerblue {
+    background-color: dodgerblue;
+}
+.selector > .navy {
+    background-color: navy;
+}
+.selector > .purple {
+    background-color: purple;
+}
+.selector > .wood {
+    background-image: url('../img/labels/wood-background.png');
+    background-size: cover;
+}
+.selector > .tiedye {
+    background-image: url('../img/labels/tiedye-blank.png');
+    background-size: cover;
+}
+
+
+.label-toggle-container > div {
+    width: 40px;
+    height: 60px;
+    overflow: hidden;
+    display: block;
+    margin: 0 0 5px 0;
+    border: 1px solid black;
+}
+.label-toggle-container input {
+    width: 40px;
+    height: 60px;
+    overflow: hidden;
+    display: block;
+    /* margin: 0 0 5px 0; */
+    /* border: 1px solid black; */
+}
+.label-toggle-container {
+    float: right;
+    /* top: 0; */
+    width: 42px;
+    margin: 0 0 0 20px;
+    display: inline-block;
+}
+.label-maker-container {
+    display: inline-block;
+    max-width: 280px;
+    /* float: left; */
+/* position: absolute; */
+}
+.label-maker-canvas {
+    /* display: inline-block; */
+    width: 320px;
+    margin: 0 auto;
+}
+.color-box-container h5 {
+    font-size: 0.83em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+.color-box-container {
+    /* height: 10px; */
+    margin-top: 30px;
+}
+.box {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    border: 1px solid black;
+    margin: 10px 1px 0 1px;
 }
 .none {
     border: transparent;
     background-image: none;
     background-color: transparent;
     color: transparent;
+}
+
+
+
+
+
+
+
+
+
+.select-outer-bars {
+    border-top: 8px solid green !important;
+    border-bottom: 8px solid green !important;
+}
+.select-inner-bars {
+    max-height: 42px;
+    margin-top: 10px;
+    border-top: 10px solid green !important;
+    border-bottom: 5px solid green !important;
+}
+
+.select-outer-border {
+    border: 1px solid green;
+    position: relative;
+    z-index: 500;
+    height: 40px;
+    width: 30px;
+    margin: -50px 4px;
+}
+
+.select-inner-border {
+    border: 2px solid green;
+    position: relative;
+    z-index: 5000;
+    height: 18px;
+    width: 18px;
+    margin: 14px 4px 0 4px;
+}
+.select-text-color {
+    color: green;
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
 }
 /******************************************************************************************/
 /*************************************** BACKGROUND ***************************************/
@@ -46,6 +184,9 @@
 .font-red, .font-red::placeholder  {
     color: red;
 }
+.font-orangered, .font-orangered::placeholder  {
+    color: orangered;
+}
 .font-green, .font-green::placeholder  {
     color: green;
 }
@@ -56,36 +197,51 @@
 /******************************************************************************************/
 /***************************************** FRAME ******************************************/
 /******************************************************************************************/
-.frame-wood {
+
+.bar-wood {
     background-image: url('../img/labels/frame-wood.png');
     background-size: cover;
     height: 375px;
     z-index: 1;
     position: relative;
 }
-.frame-black {
-    border-top: 28px solid black;
-    border-bottom: 28px solid black;
+.bar-black {
+border-color: black !important;
 }
-.frame-green {
-    border-top: 28px solid green;
-    border-bottom: 28px solid green;
+.bar-green {
+border-color: green !important;
 }
-.frame-red {
-    border-top: 28px solid red;
-    border-bottom: 28px solid red;
+.bar-red {
+border-color: red !important;
 }
-.frame-white {
-    border-top: 28px solid white;
-    border-bottom: 28px solid white;
+.bar-orangered {
+    border-color: orangered !important;
 }
-.label-frame {
+.bar-white {
+border-color: white !important;
+}
+.top-bar {
+    border-top: 28px solid;
+    /* border-color: white; */
     z-index: 2;
     position: absolute;    
     min-height: 319px;
     width: 100%;
 }
-
+.bottom-bar {
+    border-bottom: 28px solid;
+    /* border-color: white; */
+    z-index: 2;
+    position: absolute;    
+    min-height: 348px;
+    width: 100%;
+}
+/* .label-frame {
+    z-index: 2;
+    position: absolute;    
+    min-height: 319px;
+    width: 100%;
+} */
 
 
 /******************************************************************************************/
@@ -100,11 +256,14 @@
 .border-red {
     border-color: red;
 }
+.border-orangered {
+    border-color: orangered;
+}
 .border-white {
     border-color: white;
 }
 /* IMAGE BORDER BORDER LINE */
-.image-border {
+.inner-border {
     border-width: 4px;
     border-style: solid;
     margin: 100px 23px 0 23px;
@@ -113,7 +272,17 @@
     z-index: 11;
     position: absolute;
 }
-.label-border {
+/* .image-border {
+    border-width: 4px;
+    border-style: solid;
+    margin: 100px 23px 0 23px;
+    height: 196px;
+    width: 196px;
+    z-index: 11;
+    position: absolute;
+} */
+
+.outer-border {
     border-width: 2px;
     border-style: solid;
     margin: 36px 12px;
@@ -122,6 +291,15 @@
     z-index: 0;
     position: absolute;
 }
+/* .label-border {
+    border-width: 2px;
+    border-style: solid;
+    margin: 36px 12px;
+    height: 302px;
+    width: 224px;
+    z-index: 0;
+    position: absolute;
+} */
 
 
 
@@ -137,7 +315,7 @@
 }
 
 .label-body {
-    margin: -3px 0 0 0;
+    margin: 5px 0 0 0;
     position: relative;
     background-position: center;
     background-size: cover;
@@ -145,7 +323,7 @@
     width: 250px;
     height: 375px;
     max-height: 375px;
-    box-shadow: 0px 0px 15px black;
+    box-shadow: 0px 0px 10px black;
 }
 .label-body img {
     display: block;
