--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -27,10 +27,10 @@
 }
 @media screen and (max-width: 767px) {
     .box1 {
-        width: calc(100vw - 40px);
+        width: calc(100vw - 20px);
         display: block;
         float: none;
-        margin: 0 20px;
+        margin: 0 10px;
         padding: 0;
     }
     .box2 {
@@ -38,6 +38,13 @@
         display: block;
         margin-bottom: auto;
     }
+}
+@media screen and (max-width: 340px) {
+    .box1 {
+        width: 100vw;
+        margin: 0px;
+    }
+
 }
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
