--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -7,8 +7,8 @@
 }
 .label-navigation > section {
     display: inline-block;
-    /* height: 40px; */
-    font-size: 40px;
+    height: 60px;
+    font-size: 30px;
     padding: 6px 0 0 0;
 }
 .label-navigation section:first-of-type {
