--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -1,3 +1,24 @@
+.arrow-right {
+    width: 0; 
+    height: 0; 
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    
+    border-left: 15px solid black;
+    display: inline-block;
+    margin-left: 15px;
+  }
+  .arrow-left {
+    width: 0; 
+    height: 0; 
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent; 
+    
+    border-right: 15px solid black; 
+    display: inline-block;
+    margin-left: 10px;
+  }
+
 .label-navigation {
     width: calc(100vw - 0px);
     background: radial-gradient(circle farthest-side, lightgray, rgb(128, 128, 128, .8));
@@ -85,26 +106,35 @@
     border: 1px solid black;
     position: absolute;
 }
-.label-toggle-container .theme {
+.label-toggle-container > section:first-of-type {
+    margin: 110px 0 0 0;
+}
+.label-toggle-container > section {
     width: 40px;
     height: 60px;
     overflow: hidden;
     display: block;
-    margin: 250px 0 0 0;
+    margin: 8px 0 0 0;
     border: 1px solid black;
     bottom: 0;
     position: relative;
 }
-.label-toggle-container .upload {
-    width: 40px;
-    height: 60px;
-    overflow: hidden;
-    display: block;
-    margin: 10px 0 0 0;
-    border: 1px solid black;
-    bottom: 0;
-    position: relative;
+.label-toggle-container > section .search-samples {
+    background-image: url(../img/image-search-icon.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
+.label-toggle-container > section .upload-images {
+    background-image: url(../img/image-upload-icon.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+
+
+
+
+
 .label-toggle-container input {
     width: 40px;
     height: 60px;
