--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -88,11 +88,11 @@
     background-color: purple;
 }
 .selector .wood {
-    background-image: url('../img/labels/wood-background.png');
+    background-image: url(../img/labels/wood-background.png);
     background-size: cover;
 }
 .selector .tiedye {
-    background-image: url('../img/labels/tiedye-blank.png');
+    background-image: url(../img/labels/tiedye-blank.png);
     background-size: cover;
 }
 
@@ -250,9 +250,9 @@ width: 100vw;
     }
 }
 
-/******************************************************************************************/
-/*************************************** BACKGROUND ***************************************/
-/******************************************************************************************/
+/**************************************************************************************************/
+/*************************************** BACKGROUND COLORS  ***************************************/
+/**************************************************************************************************/
 .bg-purple {
     background-color: purple;
 }
@@ -295,36 +295,24 @@ width: 100vw;
     background-size: cover;
 }
 
-k
 
 
 
-/******************************************************************************************/
-/***************************************** FRAME ******************************************/
-/******************************************************************************************/
+/**************************************************************************************************/
+/***************************************** BORDER COLORS ******************************************/
+/**************************************************************************************************/
 
-.bar-wood {
+.frame-wood {
     background-image: url('../img/labels/frame-wood.png');
     background-size: cover;
     height: 375px;
     z-index: 1;
     position: relative;
 }
-.bar-black {
-border-color: black !important;
-}
-.bar-green {
-border-color: green !important;
-}
-.bar-red {
-border-color: red !important;
-}
-.bar-orangered {
-    border-color: orangered !important;
-}
-.bar-white {
-border-color: white !important;
-}
+
+
+
+
 .top-bar {
     border-top: 28px solid;
     /* border-color: white; */
@@ -352,21 +340,7 @@ border-color: white !important;
 /******************************************************************************************/
 /***************************************** BORDER *****************************************/
 /******************************************************************************************/
-.border-black {
-    border-color: black;
-}
-.border-green {
-    border-color: green;
-}
-.border-red {
-    border-color: red;
-}
-.border-orangered {
-    border-color: orangered;
-}
-.border-white {
-    border-color: white;
-}
+
 /* IMAGE BORDER BORDER LINE */
 .inner-border {
     border-width: 4px;
